High color contrast fixes for desktop
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@80678 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/common/locationbar_fdx.css
+++ b/projects/Media/docroot/assets/css/common/locationbar_fdx.css
@@ -1624,7 +1624,7 @@ option.address-icon {
 	position: absolute !important;
 	top: -10rem !important;
 	z-index: 100001 !important;
-	color: #458b4c !important;
+	color: #408244 !important;
 	background-color: #ffffff !important;
 	border: 1px solid #4fa157 !important;
 	padding: 13px 20px !important;
