--- a/projects/Media/docroot/assets/css/expressco/textalertpopup.css
+++ b/projects/Media/docroot/assets/css/expressco/textalertpopup.css
@@ -105,7 +105,7 @@
 }
 
 .textalertpopup .terms{
-  font-size:10px;
+  font-size:14px;
   text-align:center;
 }
 
@@ -113,6 +113,9 @@
   display:inline-block;
   margin-right:30px;
   text-align: left;
+}
+.ec-popup.textalertpopup{
+	background-color:#fff;
 }
 
 .nothanks-holder label.remindme{
